hphp/test/quick/stack_overflow_variadic_capture.php.expectf
Fatal error: Stack overflow in %s/quick/stack_overflow_variadic_capture.php on line 4
